# semantic-search-assistant

./: .gitattributes  .gitignore  API_README.md  FRONTEND_README.md  Makefile  TODO.md  analysis.ipynb  app.py  extract_and_sample_pdfs.py  pyproject.toml  query_db.ipynb
examples/: api_usage.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.svelte
frontend/src/lib/: CitationPreview.svelte  ConfigurationPanel.svelte  DocumentDescription.svelte  DocumentProcessor.svelte  DocumentUploadEditor.svelte  FileUpload.svelte  FinalReport.svelte  MarkdownRenderer.svelte  ProjectManager.svelte  ReportsViewer.svelte  SearchExecution.svelte  SearchPlans.svelte  TextWithCitations.svelte  api.js  stores.js
newsworthiness-test-cases/: collect_flint_emails.py
newsworthiness-test-cases/freepress_flint/: link.md
newsworthiness-test-cases/sfpress_radiation/: link.md
newsworthiness-test-cases/wired_neuralink/: link.md
prompts/: compress.md  evaluate.md  plan.md  search.md  synthesize.md
src/: api.py  compress.py  evaluate_and_synthesize.py  extract_and_sample_pdfs.py  plan.py  project_manager.py  search.py  vector_db.py
