[project]
name = "semantic-search-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "openai>=1.97.1",
    "pycryptodome>=3.23.0",
    "pypdf2>=3.0.1",
    "sentence-transformers>=2.7.0",
    "tiktoken>=0.9.0",
    "transformers>=4.51.0",
]
