[project]
name = "semantic-search-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "einops>=0.8.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "openai>=1.97.1",
    "pycryptodome>=3.23.0",
    "pypdf2>=3.0.1",
    "ruff>=0.12.7",
    "sentence-transformers>=2.7.0",
    "tiktoken>=0.9.0",
    "transformers>=4.51.0",
]
